@@ -39,14 +39,14 @@ EBUILD emacs-18.59-r2.ebuild 2426 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d
 MD5 0ec47d4b56fb359319372542b5da2556 emacs-18.59-r2.ebuild 2426
 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d9 emacs-18.59-r2.ebuild 2426
 SHA256 438e7afa0e9c99ad232e86b21503e18bbe65d79f9fd85f9adc86d11b5f4cd762 emacs-18.59-r2.ebuild 2426
-EBUILD emacs-21.4-r9.ebuild 5516 RMD160 b2647dda58721bb353b5c17ffdbc22a9b4fe5a4b SHA1 7b6efbd9196ccf3b9a284b205ed147feab8ffa5f SHA256 6063efb1dae38bbf53e256a1d87808f14ac4439fc227694a57de6958def96d4c
-MD5 d9ec4a344426e2361c44ebdf0637073e emacs-21.4-r9.ebuild 5516
-RMD160 b2647dda58721bb353b5c17ffdbc22a9b4fe5a4b emacs-21.4-r9.ebuild 5516
-SHA256 6063efb1dae38bbf53e256a1d87808f14ac4439fc227694a57de6958def96d4c emacs-21.4-r9.ebuild 5516
-MISC ChangeLog 1168 RMD160 70711b64c0d4f074a890a2c08f52f338a685ffc5 SHA1 4de04a79feefdd7bedc0cd344e3c16835b217f95 SHA256 7e8a7572017e05cbbaf18feebd9f88aca77d505c7e6a89d1f636c30d4eddd21d
-MD5 1b2ab4fa110bd838aab2bfa6f5b1f541 ChangeLog 1168
-RMD160 70711b64c0d4f074a890a2c08f52f338a685ffc5 ChangeLog 1168
-SHA256 7e8a7572017e05cbbaf18feebd9f88aca77d505c7e6a89d1f636c30d4eddd21d ChangeLog 1168
+EBUILD emacs-21.4-r9.ebuild 4818 RMD160 3d4ee54a86411a6452c5342c2a9c355281635fc5 SHA1 2833621b23c90878e9d53dfed555b13c03c029d5 SHA256 2fb07eeacbe6d39f5aadf10886a2cf75c3fa579d137e2125c66c7b5a0ac4d627
+MD5 f1a3cea98f9638a1d344874cb5f75b7b emacs-21.4-r9.ebuild 4818
+RMD160 3d4ee54a86411a6452c5342c2a9c355281635fc5 emacs-21.4-r9.ebuild 4818
+SHA256 2fb07eeacbe6d39f5aadf10886a2cf75c3fa579d137e2125c66c7b5a0ac4d627 emacs-21.4-r9.ebuild 4818
+MISC ChangeLog 1331 RMD160 3ada4c2787653b5032ea840fab8a01b8afa41121 SHA1 c4566cdfa86cf61a6fe0846e4aab43a3e4510bf7 SHA256 c588744c56084a8b2ffd2669e7f78185d8321b748ff3970b33c7b8e689316d3f
+MD5 bda93d43be79b968171a3d170b20ffe6 ChangeLog 1331
+RMD160 3ada4c2787653b5032ea840fab8a01b8afa41121 ChangeLog 1331
+SHA256 c588744c56084a8b2ffd2669e7f78185d8321b748ff3970b33c7b8e689316d3f ChangeLog 1331
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
